--- a/webserver/Makefile
+++ b/webserver/Makefile
@@ -1,5 +1,7 @@
 include ../Makefile
 
+DOMAIN := localhost
+
 %.beam:%.erl
 	erlc -W $<
 
@@ -12,7 +14,7 @@ MODS := ${shell find . -name '*.erl' | sed 's/.erl//'}
 all: compile start
 
 start:
-	cd ../game && sudo bash -c 'erl -noshell -run web_server start -pa ../webserver/ &'
+	cd ../game && sudo bash -c "erl -noshell -run web_server start $(DOMAIN) -pa ../webserver/ &"
 
 stop:
 	ps aux | grep erlang | grep web_server | grep -v grep | awk '{ print "kill -9", $$2 }' | sudo sh
