Change the server how to run
The AP server could not cooperate with the gen_server
because the gen_server had stopped after running on commandline.
So I resolved the problem by running as a daemon.

--- a/apserver/Makefile
+++ b/apserver/Makefile
@@ -6,14 +6,21 @@ EBIN := ${shell mkdir -p ebin ; echo ebin}
 ERLCFLAGS := -W -o $(EBIN)
 ERLC := erlc $(ERLCFLAGS)
 
-EBINPATH := $(EBIN)
-#ERLFLAGS := -noshell -run ap_server start $(DOMAIN) -pa $(EBINPATH)
-ERLFLAGS := -noshell
-ERLFLAGS += -run application load concentration
-ERLFLAGS += -run application start concentration
-ERLFLAGS += -run ap_server start $(DOMAIN)
-ERLFLAGS += -pa $(EBINPATH)
-ERL := erl $(ERLFLAGS)
+#EBINPATH := $(EBIN)
+#ERLFLAGS := -noshell
+#ERLFLAGS += -run application load concentration
+#ERLFLAGS += -run application start concentration
+#ERLFLAGS += -run ap_server start $(DOMAIN)
+#ERLFLAGS += -pa $(EBINPATH)
+#ERL := erl $(ERLFLAGS)
+
+PIPE_DIR := /tmp/
+LOG_DIR := ${shell mkdir -p log ; echo log}
+EBIN_PATH := $(EBIN)
+INCLUDE := ${shell mkdir -p include; echo include}
+ERLD_FLAGS := $(PIPE_DIR) $(LOG_DIR)
+ERLD_FLAGS += "erl -run setup setup -pa $(EBIN) $(INCLUDE)"
+ERLD := run_erl -daemon $(ERLD_FLAGS)
 
 MODS := ${shell find src -name '*.erl' | sed 's/.erl//'}
 
@@ -25,12 +32,12 @@ MODS := ${shell find src -name '*.erl' | sed 's/.erl//'}
 all: compile start
 
 start:
-	$(ERL) &
+	$(ERLD)
 
 stop:
-	ps aux | grep erlang | grep ap_server | grep -v grep | awk '{ print "kill -9", $$2 }' | sh
+	ps aux | grep erlang | grep setup | grep -v grep | awk '{ print "kill -9", $$2 }' | sh
 
 compile: ${MODS:%=%.beam}
 
 clean:
-	rm -rf ebin/*.beam *.dump
+	rm -rf ebin/*.beam *.dump *.log *.log.?
