--- a/apserver/Makefile
+++ b/apserver/Makefile
@@ -1,18 +1,6 @@
-include ../Makefile
-
-#DOMAIN := localhost
-
 EBIN := ${shell mkdir -p ebin ; echo ebin}
 ERLCFLAGS := -W -o $(EBIN)
 ERLC := erlc $(ERLCFLAGS)
-
-#EBINPATH := $(EBIN)
-#ERLFLAGS := -noshell
-#ERLFLAGS += -run application load concentration
-#ERLFLAGS += -run application start concentration
-#ERLFLAGS += -run ap_server start $(DOMAIN)
-#ERLFLAGS += -pa $(EBINPATH)
-#ERL := erl $(ERLFLAGS)
 
 PIPE_DIR := /tmp/
 LOG_DIR := ${shell mkdir -p log ; echo log}
@@ -26,7 +14,7 @@ MODS := ${shell find src -name '*.erl' | sed 's/.erl//'}
 %.beam: %.erl
 	$(ERLC) $<
 
-.PHONY: all start stop compile clean
+.PHONY: all start stop compile ps clean
 
 all: compile start
 
@@ -37,6 +25,9 @@ stop:
 	ps aux | grep erlang | grep setup | grep -v grep | awk '{ print "kill -9", $$2 }' | sh
 
 compile: ${MODS:%=%.beam}
+
+ps:
+	ps aux | grep erlang | grep -v grep || echo 'no process'
 
 clean:
 	rm -rf ebin/*.beam *.dump log/*
